# aichallenge

./: LICENSE  README.md  makefile
bot/: inspect-bot  run-bot  tsconfig.json
bot/src/: benbot.ts  danbot2.ts
kerfuffle_cpp_prep/: CMakeLists.txt  README.md
kerfuffle_cpp_prep/src/: main.cpp
kerfuffle_cpp_sdk/: CMakeLists.txt  README.md
kerfuffle_cpp_sdk/include/: BeastBot.h  Bot.h  GameClient.h  GameInfo.h
kerfuffle_cpp_sdk/src/: BeastBot.cpp  GameClient.cpp  GameInfo.cpp  main.cpp
kerfuffle_cs_sdk/: README.md  kerfuffle_cs_sdk.sln
kerfuffle_cs_sdk/kerfuffle_cs_sdk/: Program.cs  kerfuffle_cs_sdk.csproj
kerfuffle_cs_sdk/kerfuffle_cs_sdk/Properties/: AssemblyInfo.cs
kerfuffle_cs_sdk/kerfuffle_cs_sdk/sdk/: BoardState.cs  Bot.cs  BotDriver.cs  GameClient.cs
kerfuffle_js_sdk/: README.md  package.json
kerfuffle_js_sdk/src/: bot.js  sdk.js
kerfuffle_jvm_sdk/: README.md
kerfuffle_jvm_sdk/src/java/com/lucidsoftware/codekerfuffle/: ExampleJavaBot.java
kerfuffle_jvm_sdk/src/java/com/lucidsoftware/codekerfuffle/bot/: BoardState.java  Bot.java  BotData.java  BotFactory.java  Coordinate.java  Direction.java  LocationData.java  Player.java
kerfuffle_jvm_sdk/src/java/com/lucidsoftware/codekerfuffle/driver/: BotDriver.java  GameState.java  JsonHttp.java  Session.java
kerfuffle_python_sdk/: README.md  bot.py  sdk.py
kerfuffle_swift_sdk/: Podfile
kerfuffle_swift_sdk/kerfuffle_swift_sdk/: README.md  config.swift  main.swift  sdk.swift
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcodeproj/: project.pbxproj
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcodeproj/project.xcworkspace/xcuserdata/roy.xcuserdatad/: UserInterfaceState.xcuserstate
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcodeproj/xcuserdata/roy.xcuserdatad/xcschemes/: xcschememanagement.plist
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcworkspace/: contents.xcworkspacedata
kerfuffle_swift_sdk/kerfuffle_swift_sdk.xcworkspace/xcuserdata/roy.xcuserdatad/: UserInterfaceState.xcuserstate
kerfuffle_ts_sdk/: README.md  package.json
kerfuffle_ts_sdk/src/: bot.ts  sdk.ts
lobby/: .gitignore  package-lock.json  package.json  tsconfig.json
lobby/res/: paperio.html
lobby/src/: bracket.ts  client.ts  game.ts  gamefactory.ts  lobby.ts  player.ts
lobby/src/games/: paperio.ts
lobby/src/games/paperio/: paperiogame.ts
lobby/src/lib/: array.ts  inputwaiter.ts  math.ts  uuid.ts
tournament/: README.md  angular.json  package-lock.json  package.json
tournament/e2e/src/: app.e2e-spec.ts
tournament/src/: index.html  karma.conf.js
tournament/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
tournament/src/app/bracket/: bracket.component.html  bracket.component.less  bracket.component.ts
tournament/src/app/home/: home.component.html  home.component.ts
tournament/src/app/melee/: melee.component.html  melee.component.less  melee.component.ts
tournament/src/app/net/: lobbyclient.ts
tournament/src/app/practice/: practice.component.html  practice.component.less  practice.component.ts
viz/: package.json  tsconfig.json
viz/src/: gamevisualization.ts  paperio.ts
(+6 files in other folders)
